# AIWisper

./: .gitignore  AGENTS.md  CHANGELOG.md  DEBUG_RECORDING_ISSUE.md  LICENSE  README.md  RELEASE_INSTRUCTIONS.md  dev.sh  package.json  run.sh
backend/: faster_whisper_cli.py  go.mod  go.sum  main.go  test_gigaam_e2e.py  test_gigaam_official.py  test_mel_compare.py  test_transcribe.go
docs/: analysis_dialogue_merge_2025-12-11.md  analysis_fluidaudio_diarization_2025-12-11.md  analysis_gigaam_integration_2025-12-03.md  analysis_overlapping_timestamps_2025-12-11.md  analysis_retranscription_issues_2025-12-03.md  architecture_2025-01-28_1200.md  architecture_cloud_providers_2025-12-16.md  architecture_merge_speakers_2025-12-14.md  architecture_python_replacement_2025-12-02.md  architecture_retranscribe_chunks_2025-12-03.md  architecture_streaming_parakeet_2025-12-11.md  architecture_system_audio_capture_2025-12-15.md  architecture_voiceprints_2025-12-10.md  backlog_ui_improvements_2025-12-11.md  bugfix_metadata_status_2025-01-28.md  bugfix_ui_regression_2025-12-14.md  code_review_rust_2025-12-27.md  fix_current_session_null_2025-12-18.md  fix_recording_issues_2025-12-18.md  fix_session_list_update_2025-12-18.md  gigaam_integration_complete_2025-12-03.md  migration_phase2_audio_ipc_complete_2025-12-15.md  migration_rust_only_2025-12-27.md  migration_to_rust_2025-12-15.md  parakeet_integration_2025-12-11.md  parakeet_integration_final_report.md  parakeet_short_term_tasks_2025-12-11.md  plan_gigaam_dialogue_improvement_2025-12-10.md  plan_gigaam_integration_2025-12-03_1253.md  plan_hybrid_transcription_2025-12-12.md  plan_refactoring_app_tsx_2025-12-13.md  plan_voting_hybrid_merge_2025-12-12.md  refactoring_recording_ui_2025-01-28.md  research_external_integration_2025-12-14.md  streaming_integration_guide_2025-12-11.md  streaming_parakeet_final_report_2025-12-11.md  streaming_ui_integration_final_report_2025-12-11.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  test-electron.js  test-vu-meter.html  vite.config.ts
rust/: Cargo.toml
rust/crates/aiwisper-audio/: Cargo.toml
rust/crates/aiwisper-audio/examples/: test_capture.rs
rust/crates/aiwisper-audio/src/: capture.rs  chunk_buffer.rs  file_io.rs  lib.rs  mp3_decoder.rs  mp3_writer.rs  resampling.rs
rust/crates/aiwisper-audio/src/system_audio/: linux.rs  macos.rs  mod.rs  windows.rs
rust/crates/aiwisper-ml/: Cargo.toml
rust/crates/aiwisper-ml/src/: dialogue_merge.rs  diarization.rs  engine_manager.rs  fluidasr.rs  gigaam.rs  hybrid.rs  lib.rs  llm.rs  traits.rs  vad.rs  voiceprint.rs  whisper.rs
rust/crates/aiwisper-types/: Cargo.toml
rust/crates/aiwisper-types/bindings/: AppSettings.ts  AudioDevice.ts  AudioLevelEvent.ts  Chunk.ts  ChunkCreatedEvent.ts  ChunkStatus.ts  ChunkTranscribedEvent.ts  DialogueEntry.ts  EngineType.ts  HybridSettings.ts  ImportAudioArgs.ts  MergeSpeakersArgs.ts  ModelDownloadProgressEvent.ts  ModelInfo.ts  ModelStatus.ts  ModelType.ts  RecordingResult.ts  RenameSpeakerArgs.ts  SearchSessionsArgs.ts  Session.ts  SessionInfo.ts  SessionSpeaker.ts  SessionStartedEvent.ts  SessionStatus.ts  SessionStoppedEvent.ts  SpeakerSegment.ts  StartRecordingArgs.ts  TranscriptSegment.ts  TranscriptWord.ts  TranscriptionResult.ts  VoicePrint.ts  WaveformData.ts
rust/crates/aiwisper-types/src/: lib.rs
rust/crates/aiwisper-worker/: Cargo.toml
rust/crates/aiwisper-worker/src/: main.rs
rust/src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
rust/src-tauri/capabilities/: main.json
rust/src-tauri/resources/: coreaudio-tap  diarization-fluid  screencapture-audio  transcription-fluid
rust/src-tauri/src/: lib.rs  main.rs
rust/src-tauri/src/audio/: mod.rs
rust/src-tauri/src/commands/: audio.rs  diarization.rs  mod.rs  models.rs  providers.rs  session.rs  settings.rs  system.rs  transcription.rs  voiceprints.rs
rust/src-tauri/src/ml/: mod.rs
rust/src-tauri/src/providers/: keystore.rs  mod.rs  registry.rs  traits.rs  types.rs
rust/src-tauri/src/providers/llm/: mod.rs  ollama.rs  openai.rs  openrouter.rs
rust/src-tauri/src/providers/stt/: deepgram.rs  groq.rs  local.rs  mod.rs  openai.rs
rust/src-tauri/src/state/: mod.rs  recording.rs
rust/src-tauri/src/workers/: mod.rs
rust/ui/: index.html  package-lock.json  package.json  vite.config.ts
rust/ui/src/: App.legacy.tsx  AppTauri.tsx  index.css  main.tsx
rust/ui/src/components/: AudioMeterSidebar.tsx  HelpModal.tsx  ModelManager.tsx  PermissionsScreen.tsx  RecordingOverlay.tsx  SettingsPage.tsx  StreamingTranscription.tsx  SummaryView.tsx  index.ts
rust/ui/src/components/chunks/: ChunkSkeleton.tsx  ChunksView.tsx  ChunksViewSimple.tsx  LiveChunksView.tsx  index.ts
rust/ui/src/components/common/: ErrorBoundary.tsx  Slider.tsx  Switch.tsx  VUMeter.tsx  index.ts
rust/ui/src/components/dialogue/: DialogueHelpers.tsx  DialogueView.tsx
rust/ui/src/components/layout/: Header.tsx  MainLayout.tsx  Sidebar.tsx
rust/ui/src/components/modules/: ConsoleFooter.tsx  HybridTranscriptionSettings.tsx  ProvidersSettings.tsx  SessionControls.tsx  SpeakersTab.tsx  TranscriptionView.tsx  VoiceprintsSettings.tsx
rust/ui/src/components/session/: SystemStatus.tsx  index.ts
rust/ui/src/components/transcription/: TranscriptionTabs.tsx  index.ts
rust/ui/src/components/views/: EmptySessionView.tsx  RecordingView.tsx  WelcomeView.tsx  WelcomeViewSimple.tsx  index.ts
rust/ui/src/context/: AudioContext.tsx  BackendContext.tsx  DiarizationContext.tsx  ModelContext.tsx  ProvidersContext.tsx  SessionContext.tsx  SettingsContext.tsx  TauriContext.tsx  WebSocketContext.tsx  index.ts
rust/ui/src/hooks/: index.ts  useAudioPlayer.ts  useDragDrop.ts  useExport.ts  useKeyboardShortcuts.ts  usePermissions.ts  useProviders.ts  useSettings.ts  useStreamingTranscription.ts  useWaveform.ts  useWebSocket.ts
rust/ui/src/lib/: tauri.ts
rust/ui/src/types/: grpc.d.ts  models.ts  providers.ts  session.ts
rust/ui/src/utils/: format.ts  groupSessions.ts  grpcStream.ts  spectrogram.ts  waveform.ts
(+166 files in other folders)
