[package]
name = "aiwisper-types"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { version = "10", features = ["serde-compat"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
# Generate TypeScript bindings
ts-bindings = []
